# math-projects

./: README.md
fractals/: CMakeLists.txt  README.md  fractal.cpp  two_dim_manipulator.cpp  two_dim_manipulator.h
